--- a/online_examination/public/index.html
+++ b/online_examination/public/index.html
@@ -53,6 +53,8 @@
   <body>
     <div id="root"></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jvm/1.0.0/jvm.min.js"></script>
+
       <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
